<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num Of Pax</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="total_bill">Total BIll: $</string>
    <string name="textview">TextView</string>
    <string name="each_pays">Each Pays: $</string>
</resources>