<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/editTextAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits='"0123456789"'
        android:ems="10"
        android:hint="Amount Please"
        android:inputType="number|textPersonName|numberDecimal" />

    <TextView
        android:id="@+id/textViewPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_of_pax" />

    <EditText
        android:id="@+id/editTextPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Num Of Pax Please"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="No SVS"
            android:textOn="SVS" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="No GST"
            android:textOn="GST" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/editTextDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits='"0123456789"'
        android:ems="10"
        android:inputType="number|textPersonName" />

    <RadioGroup
        android:id="@+id/radiogroupPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/radioButtonPaynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/paynow" />

        </LinearLayout>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTotalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill" />

        <TextView
            android:id="@+id/textViewTotalBillPayable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/textview" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewEachPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/each_pays" />

        <TextView
            android:id="@+id/textViewEachPayable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview" />
    </LinearLayout>

</LinearLayout>